--- a/zeena-ahmad/index.html
+++ b/zeena-ahmad/index.html
@@ -20,38 +20,40 @@
   </aside>
 
   <main>
-    <div>
-      <section>
-        <span>PINNED POST</span>
+    <div class="one">
+      <section class="sec1">
+        <span style="color:gray">PINNED POST</span>
+        <hr style="width:100%">
         <h2>First blog post</h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Css</span> <span>Javascript</span></p>
+        <img id="img" src="./ramadan.jpg" alt="avatar">
+        <p id="gray-p">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="span1">Css</span> <span class="span2">Javascript</span></p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
           book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
           more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </section>
 
-      <section>
-        <span>RECENT POSTS</span>
+      <section class="sec2">
+        <span style="color:gray">RECENT POSTS</span>
+        <hr style="width:100%">
         <h2>How I go about my living day </h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Javascript</span></p>
+        <img id="img" src="./ramadan.jpg" alt="avatar">
+        <p id="gray-p">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="span3">Javascript</span></p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
           book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
           more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </section>
 
-      <section>
+      <section class="sec3">
 
         <h2>Photos from that time when I never visited these places</h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Not visited places</span>
+        <img id="img" src="./ramadan.jpg" alt="avatar">
+        <p id="gray-p">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="span4">Not visited places</span>
           <div>
 
-            <img src="./p1.png" alt="p1">
-            <img src="./p2.png" alt="p2">
+            <img src="./x1.jpg" alt="p1">
+            <img src="./x2.jpg" alt="p2">
 
-            <div>
+            <div class="footer">
               <table>
                 <thead>
                   <tr>
