--- a/Arvin/index.html
+++ b/Arvin/index.html
@@ -14,50 +14,52 @@
     <div>
       <h3>MY BLOG</h3>
       <p>Where my ideas manifest <br> themselves verbally!</p>
-      <p><a href="#">HOME</a><a href="#">PROJECTS</a></p>
+      <p class="btn-aside"><a href="#" class="btn">HOME</a><a href="#" class="btn">PROJECTS</a></p>
     </div>
     </div>
   </aside>
 
   <main>
-    <div>
+    <div class="main">
       <section>
         <span>PINNED POST</span>
-        <h2>First blog post</h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Css</span> <span>Javascript</span></p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+        <hr><br>
+        <h2 class="head-of-paragraph">First blog post</h2>
+        <img src="photo1.jpg" alt="avatar" class="pic">
+        <p class="head">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="css">Css</span> <span class="js">Javascript</span></p>
+        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
           book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
           more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </section>
 
       <section>
         <span>RECENT POSTS</span>
-        <h2>How I go about my living day </h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Javascript</span></p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+        <hr><br>
+        <h2 class="head-of-paragraph">How I go about my living day </h2>
+        <img src="photo4.jpg" alt="avatar" class="pic">
+        <p  class="head">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="js">Javascript</span></p>
+        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
           book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
           more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
       </section>
 
       <section>
 
-        <h2>Photos from that time when I never visited these places</h2>
-        <img src="./avatar.png" alt="avatar">
-        <p>By<a href="#"> Not Salah Al-Dhafteri</a> under <span>Not visited places</span>
+        <h2 class="head-of-paragraph">Photos from that time when I never visited these places</h2>
+        <img src="profilepic.jpg" alt="avatar" class="pic">
+        <p class="head">By<a href="#"> Not Salah Al-Dhafteri</a> under <span class="text">Not visited places</span>
           <div>
 
-            <img src="./p1.png" alt="p1">
-            <img src="./p2.png" alt="p2">
+            <img src="livingroom.jpg" alt="livingroom" class="img">
+            <img src="guitarr.png" alt="guitaar" class="img">
 
             <div>
-              <table>
+              <table class="contact">
                 <thead>
                   <tr>
-                    <td width="100px">About</td>
-                    <td width="100px">Twitter</td>
-                    <td>Github</td>
+                    <td width="100px" >About</td>
+                    <td width="100px" >Twitter</td>
+                    <td  width="100px">Github</td>
                   </tr>
                 </thead>
               </table>
